fix: svg color on safari

--- a/src/game/components/board/obstacle-tile/obstacle-tile.module.css
+++ b/src/game/components/board/obstacle-tile/obstacle-tile.module.css
@@ -5,8 +5,11 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-
   color: white;
-
   padding: var(--space-2);
+}
+
+.tile svg {
+  inline-size: 100%;
+  block-size: 100%;
 }
